Update 'go-pmrgcggi' component image to: quay.io/rhtap_qe/go-pmrgcggi:ee83432d0c5006a2cc4f12b67cb7780600c43746@sha256:6ca84c9328435349d417ff6a5845a60079cd6abbc6a8b08d95ccb6b318f96f34

--- a/components/go-pmrgcggi/overlays/development/deployment-patch.yaml
+++ b/components/go-pmrgcggi/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-pmrgcggi
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-pmrgcggi:ee83432d0c5006a2cc4f12b67cb7780600c43746@sha256:6ca84c9328435349d417ff6a5845a60079cd6abbc6a8b08d95ccb6b318f96f34
+          name: container-image
